finishing up repositories endpoint
